added search pages

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -12,6 +12,7 @@
   --color-border: #403e3c;
   --color-dark_white: #7b7b7a;
   --color-light_gray: #ebeae8;
+  --color-gray: #1d1d1d;
   --color-light_black: #1d1c1a;
   --color-light_white: #a8a3a0;
   --color-destructive: #c9c2b2;
