--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -18,6 +18,8 @@
   --color-destructive: #c9c2b2;
   --color-active_white: #bfbcb7;
   --color-black_secondary: #0a0a09;
+  --color-warm-sand: #cabfb0;
+  --color-toxic: #e6981c;
 }
 
 .clip_startBtn {
