added view style change

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -15,6 +15,7 @@
   --color-dark_gray: #2A2A29;
   --color-gray: #1d1d1d;
   --color-light_black: #1d1c1a;
+  --color-light_black_secondary: #1E1C19;
   --color-light_white: #a8a3a0;
   --color-destructive: #c9c2b2;
   --color-active_white: #bfbcb7;
