--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -22,6 +22,7 @@
   --color-black_secondary: #0a0a09;
   --color-warm-sand: #cabfb0;
   --color-toxic: #e6981c;
+  --color-toxic-light: #323231;
   --color-toxic_secondary: #C9A91D;
 }
 
